--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@reduxjs/toolkit": "^2.0.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "classnames": "^2.5.1",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
@@ -23,6 +24,7 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
+    "react-use": "^17.4.2",
     "yup": "^1.3.3"
   },
   "devDependencies": {
